Release ...
* The file "grap.defines" is now installed again; it was omitted in the
  previous release.
* When generating a RPM package, install all manual pages into
  "/usr/share/man/5man" to avoid conflicts with manual pages of
  packages supplied by the distribution default packages.

Release 070318
* [nt]roff: The concept of an "inline environment" has been introduced.
  An inline environment contains the values of the current point size, the
  current font, the current escape character, and other similar parameters.
  It can be saved with "\@{" and then restored with "\@}". Unlike the "\s0"
  and "\fP" escape sequences, inline environments form a stack. Thus after
  executing "\fB...\@{\fR...\@{\fI...\@}...\@}", the current font is "B"
  again, while it would be "I" with "\fB...\fR...\fI...\fP...\fP". Inline
  environments can be used to represent constructs like "<i>...</i>" in
  HTML, which would be translated as "\@{\fI...\@}".
* [nt]roff: A modulo zero operation (N%0) is now ignored and causes a
  warning of the "range" type to be issued. It could previously lead to
  a core dump because of an arithmetic exception.
* [nt]roff: In paragraph-at-once adjustment mode, ".in" and ".ll", when
  invoked from traps, now have a permanent effect; such settings were
  previously discarded at the end of the paragraph. What still does not
  work is "'in" outside a trap with a value relative to the indent set
  inside a trap.
* [nt]roff: An internal problem with paragraph-at-once line breaking mode
  has been fixed; it caused a ".in" or ".ll" command to be ignored under
  rare circumstances.
* [nt]roff: At the end of input in paragraph-at-once line breaking mode,
  make sure that any partial paragraph is flushed before executing other
  termination procedures. The previous failure to do so lead to missing
  output at the end of the document if it did not fit on the current page.
* troff, dpost: OpenType and TrueType fonts with Unicode platformID cmap