@@ -38,7 +38,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)draw.c	1.5 (gritter) 11/28/05
+ * Sccsid @(#)draw.c	1.6 (gritter) 3/27/07
  */
 
 /*
@@ -183,8 +183,10 @@ getdraw(void)
  */
 
 
-    if ( gotdraw == FALSE && access(drawfile, 04) == 0 )
+    if ( gotdraw == FALSE && access(drawfile, 04) == 0 ) {
 	doglobal(drawfile);
+	fprintf(gf, "/inpath false def\n");
+    }
 
     if ( tf == stdout )
 	gotdraw = TRUE;
